[type:improve] add some code style improve