@@ -742,7 +742,7 @@ class MonitorServiceTest {
         when(appService.getAppDefine(monitor.getApp())).thenReturn(job);
 
         List<Param> params = Collections.singletonList(new Param());
-        List<String> metrics = Arrays.asList();
+        List<String> metrics = List.of();
         try {
             monitorService.addNewMonitorOptionalMetrics(metrics, monitor, params);
         } catch (MonitorMetricsException e) {
@@ -750,7 +750,7 @@ class MonitorServiceTest {
         }
         reset();
         when(monitorDao.save(monitor)).thenThrow(RuntimeException.class);
-        metrics = Arrays.asList("metric-001");
+        metrics = List.of("metric-001");
         List<Metrics> metricsDefine = new ArrayList<>();
         Metrics e = new Metrics();
         e.setName("metric-001");
